# jp

./: Cargo.toml  README.md
jp-ast/: Cargo.toml
jp-ast/src/: lib.rs  mora.rs
jp-kanji/: Cargo.toml  build.rs
jp-kanji/codegen/: Cargo.toml
jp-kanji/codegen/src/: kanjidic.rs  lib.rs  main.rs
jp-kanji/src/: gen.rs  lib.rs
jp-lexer/: Cargo.toml
jp-lexer/src/: lib.rs  mora.rs
jp-mora/: Cargo.toml
jp-mora/src/: lib.rs
