[package]
name = "jp-kanji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
mora = { package = "jp-mora", path = "../jp-mora" }

[build-dependencies]
codegen = { package = "jp-kanji-codegen", path = "codegen" }
ureq = "2.4"
flate2 = "1"