[package]
name = "jp-kanji-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.22.0", features = ["serde", "serialize"] }
serde = { version = "1", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
mora = { package = "jp-mora", path = "../../jp-mora" }
thiserror = "1"